gcc/testsuite/rust.test/xfail_compile/bad_type1.rs
fn main() {
    let logical: bool = 123; // { dg-error "expected .bool. got .<integer>." }
    // { dg-error "failure in setting up let stmt type" "" { target { *-*-* } } .-1 }
}
